Assigns04_04 StableSort logic update + comments